<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LegFragment"
        android:padding="16dp">

        <TextView
            android:id="@+id/health_one"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/health_one"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="bottom" />

        <EditText
            android:id="@+id/set_one"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/health_one"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="temp"

            />

        <TextView
            android:id="@+id/health_two"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="bottom"
            android:text="@string/health_two"
            app:layout_constraintTop_toBottomOf="@id/health_one"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/set_two"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/health_two"
            app:layout_constraintTop_toBottomOf="@id/health_one"
            tools:text="temp" />

        <TextView
            android:id="@+id/health_three"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="bottom"
            android:text="@string/health_three"
            app:layout_constraintTop_toBottomOf="@id/health_two"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/set_three"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/health_three"
            app:layout_constraintTop_toBottomOf="@id/health_two"
            tools:text="temp" />


        <Button
            android:id="@+id/go_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="다음페이지로"

            app:layout_constraintTop_toBottomOf="@id/health_three"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>