<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="sharedVM"
            type="com.example.sharedviewmodelprac.model.SharedViewModel" />
        <variable
            name="finalFG"
            type="com.example.sharedviewmodelprac.FinalFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FinalFragment"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/finalFragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/final_fragment_title"
            android:textSize="36sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/back_whole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/back_whole(sharedVM.backSet)}"
            android:layout_marginTop="10dp"
            tools:text="@string/hello_blank_fragment"
            app:layout_constraintTop_toBottomOf="@id/finalFragment_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/chest_whole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/chest_whole(sharedVM.chestSet)}"
            android:layout_marginTop="10dp"
            tools:text="@string/hello_blank_fragment"
            app:layout_constraintTop_toBottomOf="@id/back_whole"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/leg_whole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/leg_whole(sharedVM.wholeLegSet)}"
            android:layout_marginTop="10dp"
            tools:text="@string/hello_blank_fragment"
            app:layout_constraintTop_toBottomOf="@id/chest_whole"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/whole_whole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/whole_whole(sharedVM.wholeSet)}"
            android:layout_marginTop="10dp"
            tools:text="@string/hello_blank_fragment"
            app:layout_constraintTop_toBottomOf="@id/leg_whole"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:onClick="@{()->finalFG.cancel()}"
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@id/save_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/save_button"/>
        <Button
            android:id="@+id/save_button"
            android:text="저장하기"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/whole_whole"
            app:layout_constraintStart_toEndOf="@id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>